# game-data

./: .dockerignore  .gitignore  Dockerfile  README.md  notifications-example.json  pyproject.toml
.github/workflows/: update-assets.yml
overrides/: fallback_maze_data.json  game-data.json  game_objects.json
src/game_data/: GameDataTypes.py  __init__.py  app_info.py  console.py  crop.py  downloader.py  env.py  extractor.py  notify.py  notifyTypes.py  s3.py  sync.py  transformer.py  utils.py
src/game_data/image_gen/: __init__.py  collection.py
